--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,27 @@ dist
 
 # TernJS port file
 .tern-port
+
+# dependencies
+frontend/node_modules
+backendend/node_modules
+/.pnp
+.pnp.js
+
+# testing
+frontend/coverage
+
+# production
+frontend/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
