--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "google-maps-react": "^2.0.6",
     "jest": "^26.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "simple-react-google-maps": "^1.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
