--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,12 @@
     "emailjs": "^3.5.0",
     "emailjs-com": "^3.2.0",
     "google-maps-react": "^2.0.6",
-    "jest": "^26.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "simple-react-google-maps": "^1.1.2",
     "web-vitals": "^1.1.2"
   },
